# HAES-HVAC

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  HAES - Requirement Discovery Document.md  README.md  alembic.ini  fly.toml  main.py  pyproject.toml  tool_validation_results.json
.cursor/: context.json
data/: internal_ops_test_data.json  internal_ops_test_data_employees.json  internal_ops_test_data_odoo_ids.json  real_inventory_data.json  static_roster.json
doc/: DEPLOYMENT.md  HAES HVAC-R FINEST - AI System Testing Protocol.md  HAES HVAC-R FINEST - Client Requested Changes Testing Protocol.md  INTERNAL_OPS_TESTING_PROTOCOL.txt  PROJECT_FLOW.md  VAPI_TROUBLESHOOTING.md
scripts/: add_vapi_tools.py  attach_knowledge_base.py  attach_tools_to_assistant.py  configure_vapi_assistant.py  configure_vapi_assistants.py  create_create_service_request_tool.py  create_lookup_customer_profile_tool.py  create_send_notification_tool.py  debug_caller_identification.py  delete_vapi_tools.py  deploy_to_fly.sh  discover_odoo_capabilities.py  find_real_employee_data.py  find_real_inventory_data.py  find_real_odoo_ids.py  find_recent_appointments.py  force_reattach_all_tools.py  list_odoo_technicians_and_slots.py  production_checklist.py  register_ops_structured_outputs.py  register_structured_outputs.py  run_report_once.py  setup_knowledge_base.py  test_create_service_request.py  test_email_production.py  test_email_send.py  test_production_check_availability.py  test_production_create_service_request.py  test_production_customer_facing_tools.py  (+20 more)
src/: main.py  (+1 more)
(+232 files in other folders)
